--- a/templates/Plantilla impresión Proyecto 2/index.html
+++ b/templates/Plantilla impresión Proyecto 2/index.html
@@ -5,6 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Lista Alumnos</title>
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+        
+        html::-webkit-scrollbar{
+            width: 7px;
+            background-color: rgb(77, 76, 76);
+        }
+        
+        html::-webkit-scrollbar-thumb{
+            background-color: rgb(62, 0, 119);
+            border-radius: 8px;
+        }
+        
+        body{
+            font-family: 'roboto', sans-serif;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url(fondoniños2.jpg);
+            background-size: cover;
+        }
+
+        header{
+            background-color: rgba(138, 137, 137, 0.753);
+        }
+
+        header .logo{
+            margin: 0;
+            padding: 25px 30px;
+            font-weight: bold;
+            color: rgb(11, 9, 12);
+            font-size: 2.5em;
+        }
+
+        header .container{
+        display: flex;
+        align-items: center;
+        }
+
+        .container img{
+            width: 60px;
+            height: 60px;
+            margin-left: 15px;
+        }
+
+        .box{
+            margin-left: 15%;
+            margin-right: 15%;
+            margin-top: 5%;
+            font-size: 1.05em;
+            transition: 1.5s;
+        }
+
+
+        .box table{
+            transition: 0.5s;
+            color: rgb(0, 0, 0);
+            background-color: #D9AFD9;
+            background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+            width: 100%;
+        }
+        
+        th, td {
+                text-align: left;
+                border-bottom: 1px solid #ddd;
+        }
+        tr:hover{
+            transition: 0.5s;
+            background-color: #00DBDE;
+            background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+            color: rgb(255, 255, 255);
+        }
+    </style>
 </head>
 
 <body>
@@ -16,65 +91,29 @@
         </div>
     </header>
     <div class="niños">
-        
+
     <div class="box">
         <table border="2">
-            <tr>
-                <td><b>Nombre y apellido Alumnos</b></td>
-                <td><b>Cedula Escolar</b></td>
-                <td><b>Grupo</b></td>
-                <td><b>Sección</b></td>
-                <td><b>Docente</b></td>
-            </tr>
-            <tr>
-                <td>Eiver Omar Soler Chacón</td>
-                <td>29514638</td>
-                <td>A</td>
-                <td>A</td>
-                <td>Vidermid</td>           
-            </tr>
-            <tr>
-                <td>Cristian Alejandro Barajas Duran</td>
-                <td>02346723</td>
-                <td>B</td>
-                <td>B</td>
-                <td>Andy</td>           
-            </tr>
-            <tr>
-                <td>Jhondeivi Marino Ruiz Pechofrio</td>
-                <td>234712312</td>
-                <td>A</td>
-                <td>D</td>
-                <td>Norberto</td>           
-            </tr>
-            <tr>
-                <td>Maria Fernanda Mora</td>
-                <td>312334112</td>
-                <td>C</td>
-                <td>F</td>
-                <td>Noris</td>           
-            </tr>
-            <tr>
-                <td>Fran Josue Durán Montilva</td>
-                <td>454687122</td>
-                <td>C</td>
-                <td>A</td>
-                <td>Pablus</td>           
-            </tr>
-            <tr>
-                <td>Mayra Karina Chacón</td>
-                <td>16540938</td>
-                <td>A</td>
-                <td>A</td>
-                <td>Ulianoff</td>           
-            </tr>
-            <tr>
-                <td>Dylan José Pereira Chacón</td>
-                <td>23272132</td>
-                <td>B</td>
-                <td>B</td>
-                <td>Julio</td>           
-            </tr>
+            <thead>
+                <tr>
+                    <td><b>Nombre y apellido Alumnos</b></td>
+                    <td><b>Cedula Escolar</b></td>
+                    <td><b>Grupo</b></td>
+                    <td><b>Sección</b></td>
+                    <td><b>Docente</b></td>
+                </tr>
+            </thead>
+            <tbody>
+                {%  for i in users  %}
+                    <tr>
+                        <td>{{nombres}} {{apellidos}}</td>
+                        <td>{{cedula}}</td>
+                        <td>{{grupo}}</td>
+                        <td>{{seccion}}</td>
+                        <td>{{docente}}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
     </div>
