--- a/templates/Plantilla impresión Proyecto 2/index.html
+++ b/templates/Plantilla impresión Proyecto 2/index.html
@@ -24,7 +24,7 @@
             margin: 0;
             width: 100%;
             height: 100%;
-            background-image: url(fondoniños2.jpg);
+            background-image: url(./imagenes/fondoniños2.jpg);
             background-size: cover;
         }
 
@@ -85,7 +85,7 @@
     <div>
     <header>
         <div class="container">
-            <img src="logozona.png" alt="logo">
+            <img src="./imagenes/logozona.png" alt="logo">
             <p class="logo">C.E.I Josefina Molina de Duque</p>
         </div>
     </header>
